# exprmat

./: .gitignore  Cargo.toml  build.sh  cargo.toml  pyproject.toml  readme  readme.md  setup.py
.github/workflows/: build-wheels.yml
docs/: requirements.txt
docs/source/: conf.py  experiment.rst  exprmat.clustering.rst  exprmat.cnv.rst  exprmat.data.rst  exprmat.descriptive.rst  exprmat.plotting.rst  exprmat.preprocessing.doublets.rst  exprmat.preprocessing.rst  exprmat.preprocessing.sctransform.rst  exprmat.reader.rst  exprmat.reduction.rst  exprmat.rst  index.rst  metadata.rst  modules.rst  page.css  palettes.rst
docs/source/_static/: page.css
docs/source/_static/files/: example-metadata.csv
docs/source/experiment/: accessors.rst  annotate.rst  clustering.rst  cnv.rst  descriptive.rst  dimreduc.rst  dynamics.rst  grn.rst  imputation.rst  index.rst  integrate.rst  io.rst  lr.rst  profiling.rst  samples.rst  scatac-qc.rst  scrna-qc.rst  st-qc.rst  subsetting.rst  summarize.rst  tcr.rst  trajectory.rst  transfer.rst
docs/source/notebooks/: annotation.ipynb  assemblies.ipynb  atac.ipynb  citeseq.ipynb  diffpeaks.ipynb  index.rst  io-integration.ipynb  lr.ipynb  metacell.ipynb  nnet.ipynb  profile-cluster.ipynb  projection.ipynb  scatac.ipynb  scenic.ipynb  statistics.ipynb  tcr.ipynb  trajectory.ipynb  velocity.ipynb
exprmat/: __init__.py  ansi.py  configuration.py  utils.py
exprmat/clustering/: __init__.py  cnmf.py  dbscan.py  gating.py  kmeans.py  leiden.py  nmf.py  rogue.py  sc3.py  seriation.py  spectral.py  summary.py  utils.py
exprmat/cnv/: __init__.py  cnvscore.py  infercnv.py
exprmat/data/: __init__.py  cistarget.py  cre.py  delim.py  finders.py  geneset.py  gff.py  icnet.py  io.py  lr.py  orthologs.py  presets.py  private.py  ranges.py  signature.py  tf.py
exprmat/data/hsa/genesets/: cancer-modules.gmt  cancer-neighborhoods.gmt  cancer.gmt  cc.gmt  chemical-perturb.gmt  human-phenotype-ontology.gmt  kegg.gmt  mf.gmt  microrna.gmt  oncogenic.gmt  pathways.gmt  positional.gmt  single-cell.gmt  transcript-factors.gmt  vaccine.gmt
exprmat/data/hsa/lr/: baccin2019  cellcall  cellchatdb  cellinker  cellphonedb  celltalkdb  connectomedb2020  consensus  embrace  guide2pharma  hpmr  icellnet  italk  kirouac2010  lrdb  ramilowski2015
exprmat/data/mmu/: mapping-ensembl.pkl  mapping-name.pkl
exprmat/data/mmu/genesets/: biocarta.gmt  cc.gmt  chemical-perturb.gmt  kegg.gmt  m2.gmt  markers.gmt  mf.gmt  microrna.gmt  mpt.gmt  positional.gmt  reactome.gmt  (+2 more)
exprmat/deconv/: deconv.py  simulation.py
exprmat/descriptive/: aggregate.py  atac.py  aucell.py  de.py  gse.py  kde.py  recovery.py  summary.py  tcr.py
exprmat/deseq/: dataset.py  gridsearch.py  inference.py  preprocessing.py  stats.py  utils.py
exprmat/dynamics/: __init__.py  generank.py  linreg.py  moments.py  optimization.py  parallel.py  preprocess.py  pseudotime.py  transition.py  utils.py  velocity.py
exprmat/grn/: __init__.py  infergrn.py  modules.py  prune.py  regressors.py  utils.py
exprmat/image/: align.py
exprmat/lr/: __init__.py  aggregate.py  method.py  pipeline.py  preprocess.py  resources.py  utils.py
exprmat/lr/icnet/: __init__.py  construction.py  importance.py  ligand.py  metrics.py  pagerank.py
exprmat/lr/methods/: cellchat.py  cellphonedb.py  connectome.py  geomean.py  logfc.py  natmi.py  rank_aggregate.py  scseqcomm.py  singlecellsignalr.py
exprmat/metacell/: __init__.py  engine.py  model.py  utils.py
exprmat/peaks/: callpeak.py  common.py  coverage.py  footprint.py  linkage.py  motif.py  sequence.py
exprmat/peaks/idr/: constants.py  idr.py  invcdf.pyx  optimization.py  utils.py
exprmat/plotting/: __init__.py  atac.py  cnmf.py  cnv.py  de.py  expression.py  gse.py  icnet.py  lr.py  milestone.py  palettes.py  sankey.py  sequence.py  summary.py  track.py  trajectory.py  utils.py  velocity.py
exprmat/preprocessing/: __init__.py  emptydrops.py  filter.py  integrate.py  linear.py  normal.py  plot.py  qc.py  sparse.py  uniform.py
exprmat/preprocessing/background/: soupx.py
exprmat/preprocessing/doublets/: composite.py  scrublet.py
exprmat/preprocessing/impute/: magic.py
exprmat/preprocessing/sctransform/: estimate.py  ksmooth.py  residual.py  transform.py
exprmat/projection/: atlas.py
exprmat/reader/: __init__.py  conversions.py  experiment.py  matcher.py  metadata.py  spatial.py  static.py  updater.py
exprmat/reduction/: __init__.py  diffmap.py  forceatlas.py  mde.py  nn.py  outliers.py  pca.py  plot.py  pumap.py  scvi.py  spectral.py  tsne.py  umap.py
exprmat/trajectory/: cytotrace.py  elpi.py  pcurve.py  pseudotime.py  root.py  trace.py
exprmat/transfer/: atlas.py
snapatac2/: Cargo.toml  cargo.toml  license
snapatac2-core/: Cargo.toml  cargo.toml
snapatac2-core/src/: genome.rs
snapatac2-core/src/feature_count/: mod.rs
snapatac2-core/src/preprocessing/: import.rs
snapatac2/src/: lib.rs
(+11 files in other folders)
