[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "."
module-name = "exprmat.snapatac"
manifest-path = "snapatac2/Cargo.toml"
exclude = [
    "exprmat/data/tools/**/*",
    "exprmat/data/tools/*"
]

[project]
name = "exprmat"
description = "exprmat: Routines for expression matrices"
readme = "readme.md"
license = {file = "license"}
requires-python = ">=3.9, <3.13"
version = "0.1.31"
authors = [
    {name = "Zheng Yang", email = "xornent@outlook.com"}
]

classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy"
]

dependencies = [
    'anndata >= 0.8.0',
    'multiprocess',
    'MACS3 >= 3.0, < 3.1',
    'natsort', 
    'numpy',
    'pandas >= 2.0',
    'polars >= 1.0, < 2.0',
    'pooch >= 1.6.0, < 2.0.0',
    'igraph >= 0.10.3',
    'pyarrow',
    'pyfaidx >= 0.7.0, < 0.8.0',
    'rustworkx',
    'scipy >= 1.4, < 2.0.0',
    'scikit-learn >= 1.0, < 2.0.0',
    'tqdm >= 4.62',
    'typeguard >= 4.0',
    'umap-learn >= 0.5.0',
    'scvi-tools >= 1.3.0',
    'scanpy',
    'mudata',
    'matplotlib',
    'seaborn',
    'torch >= 2.0',
    'annoy',
    'scikit-image',
    'scikit-misc',
    'bbknn',
    'scanorama',
    'harmonypy',
    'pymde',
    'datashader',
    'fa2_modified',
    'pynndescent',
    'gseapy',
    'metacells',
    'sh',
    'networkx',
    'palantir',
    'scfates',
    'rich',
    'adjustText',
    'h5py',
    'cytoolz',
    'frozendict',
    'dask',
    'boltons',
    'multiprocessing_on_dill',
    'pysam',
    'hdbscan',
    'graphtools',
    'bincsync >= 0.3.0',
    'pyBigWig',
    'loompy'
]

[project.optional-dependencies]
dev = [
    'sphinx',
    'sphinx-rtd-theme',
    'twine',
    'ipykernel'
]

[project.urls]
Repository = "https://github.com/yang-z-03/exprmat"
